<resources>
    <string name="app_name">BierFit</string>
    <string name="bierfit">BierFit</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Hugo!</string>
    <string name="user_email">hugo@student.tugraz.at</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <string name="description">Noroc!</string>
    <string name="lernmore">learn more</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="name">Name</string>
    <string name="cb_settings">user profile is public visible</string>
    <string name="button_settings">update</string>
    <string name="bierfitinfo">Bierfit User Position</string>
    <string name="search">search</string>
    <string name="email">email</string>
</resources>
