<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/action_user"
        android:orderInCategory="200"
        android:title="@string/name"
        android:icon="@drawable/ic_user"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
</menu>