<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background_720p"
        android:alpha="127"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TextDimTop"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_learnmore"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lernmore"
                    android:onClick="learnMore"
                    android:layout_below="@+id/description"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/textcolor"
                    android:layout_marginTop="@dimen/TextDimTop"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_centerInParent="true"/>

                <FrameLayout android:id="@+id/frame_reg_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/button_learnmore">

                    <LinearLayout
                        android:id="@+id/input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="top">

                        <EditText
                            android:id="@+id/login"
                            android:hint="@string/username_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:layout_gravity="top"
                            android:textColor="@color/textcolor"
                            android:textColorHint="@color/textcolor"
                            android:background="@color/colorPrimary"
                            android:layout_margin="10dp"/>

                        <EditText
                            android:id="@+id/password"
                            android:inputType="textPassword"
                            android:hint="@string/password_hint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingTop="7dp"
                            android:paddingBottom="7dp"
                            android:layout_gravity="bottom"
                            android:textColor="@color/textcolor"
                            android:textColorHint="@color/textcolor"
                            android:background="@color/colorPrimary"
                            android:layout_margin="10dp"/>

                        <LinearLayout
                            android:id="@+id/button_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="bottom">

                            <Button
                                android:id="@+id/button_signup"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:text="@string/signup"
                                android:onClick="signup"
                                android:background="@color/colorPrimary"
                                android:textColor="@color/textcolor"
                                android:layout_marginTop="@dimen/TextDimTop"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:layout_gravity="bottom|left"
                                android:layout_margin="10dp"/>

                            <Button
                                android:id="@+id/button_login"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:text="@string/login"
                                android:onClick="login"
                                android:background="@color/colorPrimary"
                                android:textColor="@color/textcolor"
                                android:layout_marginTop="@dimen/TextDimTop"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:layout_gravity="bottom|right"
                                android:layout_margin="10dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

            </RelativeLayout>

        </FrameLayout>

    </ScrollView>

</RelativeLayout>
