<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <FrameLayout
            android:id="@+id/frame_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="top">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher"
                        android:alpha="127"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/TextDimTop"
                        android:text="@string/username_hint"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_margin="10dp"/>

                    <EditText
                        android:id="@+id/login"
                        android:hint="@string/username_hint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:layout_gravity="top"
                        android:textColor="@color/textcolor"
                        android:textColorHint="@color/textcolor"
                        android:background="@color/colorPrimary"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/TextDimTop"
                        android:text="@string/password_hint"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_margin="10dp"/>

                    <EditText
                        android:id="@+id/password"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/textcolor"
                        android:textColorHint="@color/textcolor"
                        android:background="@color/colorPrimary"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/TextDimTop"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_margin="10dp"/>

                    <EditText
                        android:id="@+id/email_setting"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/textcolor"
                        android:textColorHint="@color/textcolor"
                        android:background="@color/colorPrimary"
                        android:layout_margin="10dp"/>

                    <CheckBox android:id="@+id/checkbox_meat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_settings"
                        android:onClick="onCheckboxClicked"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"/>

                    <Button
                        android:id="@+id/button_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/button_settings"/>


                </LinearLayout>
            </FrameLayout>

    </ScrollView>

</RelativeLayout>
